test/SemanticAnalysis/Typename/InvalidTypenamePolyCast.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() { }

interface Interface {
	static void method();
}

void function0(typename_t<TestClass> typeValue) {
	// CHECK: .loci:12:12: error: Can't implicitly cast value of type 'typename_t<TestClass>&' to type 'typename_t<Interface>'.
	function1(typeValue);
}

void function1(unused typename_t<Interface> typeValue) { }

// CHECK: 1 error generated.

